--- a/footer.html
+++ b/footer.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <footer>footer page</footer>
+    <h2>this is new line</h2>
+    <h3>this is another new line</h3>
 </body>
 </html>
